# gb_mahjong_server_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/scripts/: install_deps_ubuntu.sh
cpp_engine/src/: gb_mahjong_adapter.cc  gb_mahjong_adapter.h  main.cc  rule_engine_service.cc  rule_engine_service.h
proto/: client_server.proto  internal_engine.proto
proto/client/: actions.proto  events.proto  session.proto  settlement.proto
proto/client/common/: enums.proto  types.proto
proto/engine/: scoring.proto  service.proto  validation.proto
proto/engine/common/: enums.proto  types.proto
sql/: 001_init_schema.sql  002_gateway_schema.sql
src/: app.rs  engine.rs  lib.rs  load_test.rs  main.rs  proto.rs  room.rs  ws.rs
src/auth/: mod.rs
src/db/: mod.rs  models.rs  postgres.rs
src/http/: mod.rs
src/lobby/: mod.rs
src/room/: helpers.rs  manager.rs  state_broadcast.rs  state_engine.rs  state_handlers.rs  state_load_test.rs  state_match.rs  tests.rs
